--- a/index.html
+++ b/index.html
@@ -503,11 +503,8 @@ Enhancing skills in teamwork, version control (Git), and industry-standard workf
 <!-- -----------------------------------------contact----------------------------------- -->
 
 
-<    <script src="https://cdnjs.cloudflare.com/ajax/libs/emailjs-com/3.2.0/email.min.js"></script>
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
+
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./portfolio.js"></script>
   </body>
 </html> 
